Atualização do jogo em grafico